# hackathondevs

./: README.md
bot-llama3.1-RAG/: app.py
bot-llama3.1-assistant/: app.py
bot-llama3.1-base/: app.py
bot-llama3.1-intructions/: app.py
bot-llama3.2-vision/: app.py  bit.py  pyproject.toml
bot-mistral-base/: app.py
bot-openai-RAG/: app.py
bot-openai-assistant/: app.py
bot-openai-base/: app.py  pyproject.toml
bot-openai-base/slack-bot-openai/: pyproject.toml
bot-openai-function-calling/: app.py
bot-openai-intructions/: app.py
index/: MAIN_aftz87w7sba0bsig.seg  MAIN_fbvkwda2dbhy41s9.seg  _MAIN_2.toc
vector_db/1e1d0c44-6767-492d-b57f-f9a69f816a97/: index_metadata.pickle
