[tool.poetry]
name = "slack-bot-openai"
version = "0.1.0"
description = "a slack bot connected to OpenAI for the Hackathon"
authors = ["AlanBustamanteRemerge <alan.bustamante@remerge.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
slack-bolt = "^1.19.1"
fastapi = "^0.112.0"
openai = "^1.40.1"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
